# VMAVIFicient

./: .gitignore  README.md  meson.build
src/: main.c  meson.build
src/audio/: audio.c  audio.h  meson.build
src/image/: image.c  image.h  meson.build
src/metadata/: meson.build  metadata.c  metadata.h
src/video/: meson.build  video.c  video.h
src/vmaf/: meson.build  vmaf.c  vmaf.h
subprojects/: FFmpeg.wrap  libaom.wrap  libexif.wrap  libopus.wrap  libvmaf.wrap
subprojects/ffmpeg-wrap/: meson.build
